--- a/index.html
+++ b/index.html
@@ -4,10 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="index.css">
+    <script defer src="index.js"></script>
     <title>Carrinho de compras</title>
 </head>
 <body>
-    <script src="index.js"></script>
+    <!-- <main>
+        <h1>Virtual Market</h1>
+        <ul>
+            <li class="itemTitle"><span>Item</span><span>Valor</span></li>
+            <li><span class="item">Uva Crimson</span><span class="value">44,99</span></li>
+            <li><span class="item">Vinho Canção</span><span class="value">17,98</span></li>
+            <li class="totalTitle"><span>Total</span><span class="totalValue">63,00</span></li>
+        </ul>
+        <button>Finalizar compra</button>
+    </main> -->
 </body>
 </html>
